--- a/gogo/build.gradle
+++ b/gogo/build.gradle
@@ -24,13 +24,14 @@ repositories {
     }
 }
 dependencies {
-    compile fileTree(dir: 'libs', include: ['*.jar'])
+    compile fileTree(include: ['*.jar'], dir: 'libs')
     androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
     //compile 'com.ashokvarma.android:bottom-navigation-bar:1.3.0'
     //compile 'com.aurelhubert:ahbottomnavigation:1.5.1'
     //compile 'com.ncapdevi:frag-nav:1.0.3'
+    compile files('libs/libsvm.jar')
     compile 'com.roughike:bottom-bar:2.0.2'
     compile 'com.android.support:appcompat-v7:24.2.1'
     compile 'com.android.support:support-v4:24.2.1'
