--- a/gogo/src/main/AndroidManifest.xml
+++ b/gogo/src/main/AndroidManifest.xml
@@ -1,6 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.cc.gogo">
+    　<uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
+    　<uses-permission android:name="android.permission.MOUNT_UNMOUNT_FILESYSTEMS"/>
 
     <application
         android:allowBackup="true"
@@ -8,20 +10,25 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".Activities.Sample1Activity"></activity>
+        <activity android:name=".Activities.Sample1Activity" />
         <activity android:name=".Activities.StepsActivity">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value=".Activities.MainActivity" />
         </activity>
-        <activity android:name=".Activities.MainActivity">
+        <activity
+            android:name=".Activities.MainActivity"
+            android:launchMode="singleTask">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
         <activity android:name=".Activities.MusicActivity" />
-        <activity android:name=".Activities.Main2Activity"></activity>
+        <activity android:name=".Activities.Main2Activity" />
+        <activity android:name=".Activities.CollectionMenuActivity" />
+        <activity android:name=".Activities.CollectWalkActivity"></activity>
     </application>
 
 </manifest>
