--- a/gogo/src/main/AndroidManifest.xml
+++ b/gogo/src/main/AndroidManifest.xml
@@ -1,8 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.cc.gogo">
-    　<uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
-    　<uses-permission android:name="android.permission.MOUNT_UNMOUNT_FILESYSTEMS"/>
+
+    <uses-permission android:name="android.permission.WRITE_CONTACTS" />
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.MOUNT_UNMOUNT_FILESYSTEMS" />
+    <uses-permission android:name="android.permission.WAKE_LOCK" />
 
     <application
         android:allowBackup="true"
@@ -10,6 +14,7 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
+        <activity android:name=".Activities.SettingsActivity"></activity>
         <activity android:name=".Activities.Sample1Activity" />
         <activity android:name=".Activities.StepsActivity">
             <meta-data
@@ -21,7 +26,6 @@
             android:launchMode="singleTask">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
@@ -29,6 +33,7 @@
         <activity android:name=".Activities.Main2Activity" />
         <activity android:name=".Activities.CollectionMenuActivity" />
         <activity android:name=".Activities.CollectWalkActivity"></activity>
+        <service android:name=".Service.StepCounterService"></service>
     </application>
 
 </manifest>
