--- a/gogo/build.gradle
+++ b/gogo/build.gradle
@@ -42,4 +42,5 @@ dependencies {
     compile 'com.github.baoyachi:StepView:1.9'
     compile 'com.jakewharton:butterknife:8.0.1'
     testCompile 'junit:junit:4.12'
+    compile 'com.github.shinelw:library:1.0.1'
 }
