--- a/gogo/src/main/AndroidManifest.xml
+++ b/gogo/src/main/AndroidManifest.xml
@@ -14,9 +14,15 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".Activities.SettingsActivity" />
-        <activity android:name=".Activities.Sample1Activity" />
-        <activity android:name=".Activities.StepsActivity">
+        <activity
+            android:name=".Activities.SettingsActivity"
+            android:screenOrientation="portrait" />
+        <activity
+            android:name=".Activities.Sample1Activity"
+            android:screenOrientation="portrait" />
+        <activity
+            android:name=".Activities.StepsActivity"
+            android:screenOrientation="portrait">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value=".Activities.MainActivity" />
@@ -33,12 +39,16 @@
         </activity>
         <activity android:name=".Activities.MusicActivity" />
         <activity android:name=".Activities.Main2Activity" />
-        <activity android:name=".Activities.CollectionMenuActivity" />
-        <activity android:name=".Activities.CollectWalkActivity" />
+        <activity
+            android:name=".Activities.CollectionMenuActivity"
+            android:screenOrientation="portrait" />
+        <activity
+            android:name=".Activities.CollectWalkActivity"
+            android:screenOrientation="portrait" />
 
         <service android:name=".Service.StepCounterService" />
-
-        <activity android:name=".Activities.LoadingActivity" />
+        <activity
+            android:name=".Activities.LoadingActivity"
+            android:screenOrientation="portrait" />
     </application>
-
 </manifest>
