--- a/gogo/src/main/AndroidManifest.xml
+++ b/gogo/src/main/AndroidManifest.xml
@@ -15,7 +15,9 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".Activities.IntroActivity">
+        <activity
+            android:name=".Activities.IntroActivity"
+            android:theme="@style/AppTheme.NoActionBar">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
@@ -36,6 +38,7 @@
         </activity>
         <activity
             android:name=".Activities.MainActivity"
+            android:theme="@style/AppTheme.NoActionBar"
             android:launchMode="singleTask"
             android:screenOrientation="portrait"></activity>
         <activity android:name=".Activities.MusicActivity" />
